fix investor text wrapping

--- a/assets/sass/_components.scss
+++ b/assets/sass/_components.scss
@@ -333,6 +333,10 @@
 	display: block;
 }
 
+.partners-list li span{
+	padding-right: rem-calc(15);
+}
+
 .jobs{
 	margin: 0;
 	padding: 0;
